[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = ""
authors = ["Mattis Kristoffersson <mattis.kristoffersson@ingka.ikea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
yfinance = "^0.2.37"
plotly = "^5.19.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
